--- a/src/main/webapp/WEB-INF/templates/proptable.vm
+++ b/src/main/webapp/WEB-INF/templates/proptable.vm
@@ -11,8 +11,8 @@
 #if ($property.isInverse())
           <small>is</small>
 #end
-#if ($showLabels)
-          <a class="uri" href="$property.URI" title="$property.URI: $property.description">$property.label</a>
+#if ($showLabels && $property.label)
+          <a class="uri" href="$property.URI" title="$property.URI">$property.label</a>
 #elseif ($property.hasPrefix())
           <a class="uri" href="$property.URI" title="$property.URI"><small>$property.Prefix:</small>$property.LocalName</a>
 #else
@@ -27,8 +27,8 @@
 #foreach ($value in $property.Values)
             <li>
 #if ($value.Node.isURI())
-#if ($showLabels && $value.isType())
-              <a class="uri" href="$value.Node.URI" title="$value.Node.URI: $value.description">$value.label</a>
+#if ($showLabels && $value.isType() && $value.label)
+              <a class="uri" href="$value.Node.URI" title="$value.Node.URI">$value.label</a>
 #elseif ($value.hasPrefix())
               <a class="uri" href="$value.Node.URI" title="$value.Node.URI"><small>$value.Prefix:</small>$value.LocalName</a>
 #else
