--- a/src/main/webapp/WEB-INF/templates/proptable.vm
+++ b/src/main/webapp/WEB-INF/templates/proptable.vm
@@ -27,7 +27,7 @@
 #foreach ($value in $property.Values)
             <li>
 #if ($value.Node.isURI())
-#if ($showLabels && $value.isType() && $value.label)
+#if ($showLabels && $value.label)
               <a class="uri" href="$value.Node.URI" title="$value.Node.URI">$value.label</a>
 #elseif ($value.hasPrefix())
               <a class="uri" href="$value.Node.URI" title="$value.Node.URI"><small>$value.Prefix:</small>$value.LocalName</a>
